examples/valid/13_user_type_function.moo

type User def
  User(Int, Float)
end-def

fun upSaleAll(users: List(User), acress: Float) -> List(User) do
    let u1: User := User(1, 3.0)
    let u2: User := User(2, 2.0)
    let u3: User := User(3, 1.0)


    return users
end-upSaleAll

fun main() -> Int do

  return 0
end-main